--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,204 @@
 .App {
   text-align: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pageHeader {
+  background-image: linear-gradient(to right, darkslategray, cadetblue);
+  width: 100%;
+  height: 100px;
+  padding-top: 25px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pageHeader .logoContainer {
+  float: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+  padding-top: 15px;
+  padding-left: 35px;
+}
+.logo--md {
+  object-fit: cover;
+  width: 55px;
+  height: 55px;
+}
+.top-menu {
+  padding-right: 100px;
+  float: right;
+  vertical-align: bottom;
+}
+.search-bar {
+  padding-top: 25px;
+}
+.top-menu > div {
+  float: left;
+}
+.menu-elements {
+  padding-right: 100px;
+}
+.menu-element {
+  padding: 10px;
+  border: solid;
+  border-radius: 50%;
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+  cursor: pointer;
+}
+/* prettier-ignore */
+.search-button{
+  position:relative;
+   top:-0px;
+  background-color:whitesmoke;
+  width: 35px;
+  border-radius: 0 25px 25px 0;
+}
+input.form-input[type="text"] {
+  border: 1px;
+  outline: none;
+  background-color: mintcream;
+  border-radius: 25px 0 0 25px;
+  height: 30px;
+  width: 250px;
+  font-size: 18px;
+  margin: 2px;
+}
+button.form-input {
+  height: 32px;
+  border: 3px;
+  font-size: 18px;
+}
+textarea:focus,
+input:focus {
+  outline: none;
+}
+button {
+  cursor: pointer;
+}
+.logo {
+  height: 15px;
+  width: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+/*Page Content*/
+.page-content {
+  display: inline-block;
+  box-sizing: border-box;
+  margin: auto;
+  width: 90%;
+  padding: 10px;
+  background-color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
+/*Page Footer*/
+.page-footer {
+  background-color: #699187;
+  width: 100%;
+  height: 50px;
+  padding-top: 25px;
+}
+.footer-message {
+  color: whitesmoke;
+}
+
+/*Slider Component*/
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  width: 45%;
+  padding: 15px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #699187;
+}
+.mySlides > img {
+  width: 100%;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  border: none;
+  background-color: transparent;
+  border-radius: 50%;
+}
+.next {
+  left: 100%;
+  float: right;
+}
+.prev {
+  right: 100%;
+  float: left;
+}
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: whitesmoke;
+}
+/*Carousel*/
+.carousel-container {
+  display: block;
+  overflow: hidden;
+}
+.hidden {
+  display: none;
+}
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2.5s;
+  animation-name: fade;
+  animation-duration: 2.5s;
+}
+
+@-webkit-keyframes fade {
   from {
-    transform: rotate(0deg);
+    opacity: 0.4;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/*Grid*/
+.grid-component {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  padding: 20px;
+}
+.gridcell-component {
+  width: 25%;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  margin: 10px;
+  flex-basis: calc(20% - 22px);
+}
+.gridcell-image {
+  width: 40%;
+}
+.gridcell-data {
+  text-align: left;
+  padding: 10%;
 }
