--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,19 @@
 .App {
+  position: relative;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .pageHeader {
+  position: relative;
   background-image: linear-gradient(to right, darkslategray, cadetblue);
   width: 100%;
   height: 100px;
   padding-top: 25px;
 }
 .pageHeader .logoContainer {
+  cursor: pointer;
   float: left;
   display: flex;
   -webkit-filter: invert(100%);
@@ -82,6 +85,10 @@ button {
 
 /*Page Content*/
 .page-content {
+  position: relative;
+  min-height: 90vh;
+}
+.home-page {
   display: inline-block;
   box-sizing: border-box;
   margin: auto;
@@ -201,4 +208,83 @@ button {
 .gridcell-data {
   text-align: left;
   padding: 10%;
+}
+/*Product List */
+.product-list {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  margin: auto;
+}
+.product-list-container {
+  display: table;
+  box-sizing: border-box;
+  margin: auto;
+  padding: 10px;
+}
+/*Sidebar*/
+.sidebar {
+  height: 100%;
+  min-width: 20%;
+  position: relative;
+  top: 0;
+  left: 0;
+  background-color: whitesmoke;
+  /*background-image: linear-gradient(to bottom, darkslategray, #699187);*/
+}
+.sidebar > h1 {
+  color: black;
+}
+.category {
+  padding-top: 5px;
+  position: relative;
+  color: grey;
+  cursor: pointer;
+  border-bottom: solid;
+}
+.category :hover {
+  color: #699187;
+}
+.category > h2 {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  padding-top: 0px;
+}
+.selectedCategory {
+  background-color: lightslategray;
+  color: white;
+}
+.selectedCategory :hover {
+  color: white;
+}
+/*Pagination*/
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #699187;
+  width: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  float: right;
+}
+
+li {
+  float: left;
+  padding: 2px;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: cadetblue;
 }
