--- a/src/App.css
+++ b/src/App.css
@@ -314,13 +314,20 @@ button {
 .paginationList > li button:hover {
   background-color: cadetblue;
 }
+/*Search*/
+.search-result-page {
+  display: table;
+  box-sizing: border-box;
+  margin: auto;
+  padding: 10px;
+}
 .search-result-list {
   display: block;
   margin: auto;
   padding: 20px;
 }
 .search-result-item {
-  width: 25%;
+  width: 55%;
   background-color: white;
   border-radius: 5px;
   border: 1px solid #ddd;
