--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,17 @@ button {
   height: 15px;
   width: 15px;
 }
-
+.cart-size {
+  filter: invert(100%);
+  text-decoration: none;
+  font-weight: bold;
+  background-color: mintcream;
+  border-radius: 50%;
+  padding: 5px;
+}
+.no-decoration {
+  text-decoration: none;
+}
 /*Page Content*/
 .page-content {
   position: relative;
@@ -208,7 +218,26 @@ button {
 .gridcell-data {
   text-align: left;
   padding: 10%;
+  height: 100px;
 }
+.gridcell-bottom {
+  padding: 0 10%;
+}
+.gridcell-button {
+  background-color: mintcream;
+  width: 100%;
+  border-radius: 5%;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 5px;
+  border-width: 1px;
+}
+.gridcell-link {
+  text-decoration: none;
+  text-align: center;
+}
+
 /*Product List */
 .product-list {
   position: relative;
@@ -314,6 +343,55 @@ button {
 .paginationList > li button:hover {
   background-color: cadetblue;
 }
+/*Product detail*/
+.product-detail {
+  width: 90%;
+  margin: auto;
+  background-color: whitesmoke;
+}
+.details-table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 75%;
+  margin: 50px auto;
+}
+
+.details-table td,
+.details-table th {
+  border: 1px dashed #ddd;
+  padding: 8px;
+  background-color: white;
+}
+
+.details-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: mintcream;
+  color: black;
+}
+input.form-input[type="number"] {
+  border-color: black;
+  border: 1px;
+  background-color: white;
+  height: 50px;
+  width: 250px;
+  font-size: 32px;
+  margin: 2px;
+}
+.form-input-button {
+  position: relative;
+  top: -2px;
+  border: 1px;
+  outline: none;
+  height: 50px;
+  width: 200px;
+  font-size: 24px;
+  margin: 2px;
+  background-color: #699187;
+  color: whitesmoke;
+}
+
 /*Search*/
 .search-result-page {
   display: table;
@@ -412,4 +490,26 @@ button {
 .swiper-button-prev,
 .swiper-button-next {
   color: #699187;
+}
+/*Cart*/
+.cart-list {
+  margin: auto;
+}
+.green-button {
+  background-color: mintcream;
+  width: 200px;
+  border-radius: 5%;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 5px;
+  border-width: 1px;
+}
+.cart-item {
+  width: 35%;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  margin: auto;
+  padding: 5px;
 }
